--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -29,6 +29,8 @@ jobs:
           go test `go list ./... | grep -v examples` -coverprofile=coverage.txt -covermode=atomic
 
       - name: Upload coverage report
-        uses: codecov/codecov-action@v1.0.2
+        uses: codecov/codecov-action@v1
         with:
           file: ./coverage.txt
+          flags: unittests
+          name: codecov-umbrella
